build: move public/index.html to root for Vite

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,14 @@
-﻿<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Osteoupgrade v5</title>
-  </head>
-  <body>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#4A90E2" />
+    <meta name="description" content="OsteoUpgrade - Aide au diagnostic ostéopathique" />
+    <title>OsteoUpgrade v3.0</title>
+</head>
+<body>
+    <noscript>Vous devez activer JavaScript pour utiliser cette application.</noscript>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
 </html>
