--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#4A90E2" />
-    <meta name="description" content="OsteoUpgrade - Aide au diagnostic ostéopathique" />
+    <meta name="description" content="OsteoUpgrade - Aide au diagnostic ostÃ©opathique" />
     <title>OsteoUpgrade v3.0</title>
 </head>
 <body>
