restore: replace frontend with original CRA app (clean base)

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,13 +1,14 @@
-﻿<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
-  <head>
+<head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>OsteoUpgrade</title>
-  </head>
-  <body>
-    <noscript>Vous devez activer JavaScript pour faire tourner cette app.</noscript>
+    <meta name="theme-color" content="#4A90E2" />
+    <meta name="description" content="OsteoUpgrade - Aide au diagnostic ostéopathique" />
+    <title>OsteoUpgrade v3.0</title>
+</head>
+<body>
+    <noscript>Vous devez activer JavaScript pour utiliser cette application.</noscript>
     <div id="root"></div>
-  </body>
+</body>
 </html>
